--- a/errou.html
+++ b/errou.html
@@ -10,5 +10,8 @@
       <div id="imagem"></div>
       <p>errouuuukkkkkkkkkk<br> volta do começo 🤣👌🤪</p>
       <a href="index.html">voltah lindah</a>
+      <audio autoplay="autoplay">
+        <source src="risada-do-gato.mp3" type="audio/mp3" />
+        </audio>
 </body>
 </html>
