--- a/final.html
+++ b/final.html
@@ -10,7 +10,7 @@
     <div id="tela">
         <div id="quadrado">
             <h1>acaboooooo</h1>
-            <p>Espero que tenha gostado (e chorado) amor ksks</p>
+            <p>Espero que tenha gostado amor ksks</p>
             <p>fiz esse site curtinho pra ser engraçadinho, mas também pra te lembrar de momentos bons que passamos juntos. estamos juntos já faz bastante tempo, e desejo que esse tempo aumente pra sempre</p>
             <p>sou muito feliz ao seu lado, você é uma menina incrível em todos os aspectos, e não sei o que eu seria sem vc ao meu lado (sei sim, seria parecido com aquela foto feia, todo fodido)</p>
             <p>eu te amo demais minha namorada, feliz 2 décadas vividas 🥰🥰🥰, depois vou cobrar os beijos q vc ganhou rsrsrsrsrsr</p>
